log
Thu Apr 16 08:05:01 PM UTC 2026: 
 hashmap.c | 81 +++++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 71 insertions(+), 10 deletions(-)
 tests:  17|0
total_score: 60/60
59bfec4
Thu Apr 16 08:06:45 PM UTC 2026: 
 hashmap.c | 78 +++++----------------------------------------------------------
 1 file changed, 6 insertions(+), 72 deletions(-)
 tests:  0|7
total_score: 0/60
e7bf962
Thu Apr 16 08:10:28 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:16: error: too few arguments to function ‘hash’
   62 |     long pos = hash(key);
      |                ^~~~
hashmap.c:28:6: note: declared here
   28 | long hash( char * key, long capacity) {
      |      ^~~~
0192c5a
Thu Apr 16 08:11:21 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
b744a47
Thu Apr 16 08:14:50 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
edd4197
Thu Apr 16 08:29:15 PM UTC 2026: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/60
3bfe4db
Thu Apr 16 08:31:07 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:71:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   71 |     map->bucket[pos] = nuevo;
      |          ^~~~~~
      |          buckets
5741811
Thu Apr 16 08:31:20 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|7
total_score: 0/60
1195559
Thu Apr 16 08:32:14 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
29960d2
Thu Apr 16 08:32:29 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|7
total_score: 0/60
335b5c8
Thu Apr 16 08:33:38 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|7
total_score: 0/60
addc031
Thu Apr 16 08:35:10 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|7
total_score: 0/60
356d87d
Thu Apr 16 08:38:10 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|6
total_score: 5/60
2e8ef36
Thu Apr 16 08:40:28 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
40900f6
Thu Apr 16 08:41:48 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
412cf59
Thu Apr 16 08:44:03 PM UTC 2026: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
39ef207
Thu Apr 16 08:44:26 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a20837e
Thu Apr 16 08:46:04 PM UTC 2026: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|7
total_score: 0/60
87852ee
Thu Apr 16 08:48:20 PM UTC 2026: 
 hashmap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  3|6
total_score: 5/60
2c46ee1
Thu Apr 16 08:49:04 PM UTC 2026: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
c3ffde7
Thu Apr 16 08:49:52 PM UTC 2026: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:82: error: expected ‘)’ before ‘{’ token
   63 |     while (map->buckets[pos] != NULL && is_equal(map->buckets[pos]->key, key)== 0{
      |           ~                                                                      ^
      |                                                                                  )
hashmap.c:75:1: error: expected expression before ‘}’ token
   75 | }
      | ^
64564b2
Thu Apr 16 08:50:08 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 5/60
30064a0
Thu Apr 16 08:50:34 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
d7c3bb4
Thu Apr 16 08:51:49 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 15/60
f2496ba
Sat Apr 18 05:58:45 PM UTC 2026: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:22: error: ‘newMap’ is used uninitialized [-Werror=uninitialized]
   49 |     newMap->capacity = capacity;
      |     ~~~~~~~~~~~~~~~~~^~~~~~~~~~
hashmap.c:48:14: note: ‘newMap’ was declared here
   48 |     HashMap* newMap;
      |              ^~~~~~
cc1: all warnings being treated as errors
b9eaeb7
Sat Apr 18 05:59:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:53:12: error: incompatible types when returning type ‘HashMap’ {aka ‘struct HashMap’} but ‘HashMap *’ {aka ‘struct HashMap *’} was expected
   53 |     return *newMap;
      |            ^~~~~~~
hashmap.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
174a2d2
Sat Apr 18 06:03:01 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:22: error: ‘newMap’ is used uninitialized [-Werror=uninitialized]
   49 |     newMap->capacity = capacity;
      |     ~~~~~~~~~~~~~~~~~^~~~~~~~~~
hashmap.c:48:14: note: ‘newMap’ was declared here
   48 |     HashMap *newMap;
      |              ^~~~~~
cc1: all warnings being treated as errors
2ef58a7
Sat Apr 18 06:08:38 PM UTC 2026: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 20/60
e7eeecc
Sat Apr 18 06:10:28 PM UTC 2026: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 20/60
3bc97b9
Sat Apr 18 08:12:08 PM UTC 2026: 
 tests:  5|4
total_score: 20/60
6ad90b3
Sat Apr 18 08:31:36 PM UTC 2026: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 20/60
71240cf
Sat Apr 18 08:32:22 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
d1c32ec
Sat Apr 18 08:34:51 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a71a2a5
Sat Apr 18 08:40:42 PM UTC 2026: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  8|3
total_score: 30/60
d2626f9
Sat Apr 18 08:41:16 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|3
total_score: 30/60
c0d38a2
Sat Apr 18 08:52:11 PM UTC 2026: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 40/60
6118711
Sat Apr 18 08:59:32 PM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘firstMap’:
hashmap.c:150:17: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
  150 |     return map->bucket[pos];
      |                 ^~~~~~
      |                 buckets
hashmap.c:151:1: error: control reaches end of non-void function [-Werror=return-type]
  151 | }
      | ^
cc1: all warnings being treated as errors
c91f7ba
Sat Apr 18 08:59:40 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 40/60
ed2bb0d
Sat Apr 18 09:03:26 PM UTC 2026: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 40/60
fa9ed88
